# salvus

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.TEMPLATE  Doxyfile  LICENSE  README.md  codecov.yml
conf/: CMakeLists.txt.travis  install-deps.sh  install-petsc.sh
doc/: Makefile  Readme.md  api_index.rst  conf.py  index.rst  mainpage.md  make.bat  some_other_page.rst
include/: salvus.h
include/Element/: Element.h  ElementAdapter.h
include/Element/HyperCube/: HexP1.h  Hexahedra.h  Quad.h  QuadP1.h  TensorQuad.h
include/Element/HyperCube/Autogen/: hex_autogen.h  order10_square.h  order1_hex.h  order2_hex.h  order3_hex.h  order3_square.h  order4_hex.h  order4_square.h  order5_hex.h  order6_hex.h  order7_hex.h  order8_hex.h  order8_square.h  order9_hex.h  order9_square.h  quad_autogen.h
include/Element/Simplex/: TetP1.h  Tetrahedra.h  TriP1.h  Triangle.h
include/Element/Simplex/Autogen/: p3_triangle.h
include/Mesh/: ElasticAcousticNewmark2D.h  ElasticAcousticNewmark3D.h  ElasticNewmark2D.h  Mesh.h  ScalarLeapFrog4th.h  ScalarNewmark2D.h
include/Model/: ExodusModel.h  Model.h
include/Physics/: Acoustic2D.h  Acoustic3D.h  Acoustic3D_V.h  AcousticElastic2D.h  AcousticHex3D.h  AcousticHex3D_LF.h  AcousticTet.h  AcousticTri.h  Elastic2D.h  Elastic3D.h  ElasticAcoustic2D.h  HomogeneousDirichlet.h  SaveSurfaceGreenFunction.h  Scalar.h  ScalarTri.h
include/Problem/: FieldIo.h  NewmarkGeneral.h  Order2Newmark.h  Problem.h  ProblemNew.h
include/Receiver/: Receiver.h  ReceiverHdf5.h
include/Source/: Ricker.h  Source.h  SourceHdf5.h
include/Utilities/: Logging.h  Options.h  PETScExtensions.h  Types.h  Utilities.h
src/cxx/: Main.cpp  Mesh.cpp  Mesh.h  Options.cpp  Options.h  Problem.cpp  Problem.h  Source.cpp  Source.h
src/cxx/Element/: Element.cpp  Element.h  ElementAdapter.h  ElementNew.cpp  ElementNew.h
src/cxx/Element/HyperCube/: Hexahedra.cpp  Hexahedra.h  HexahedraNew.cpp  HexahedraNew.h  Quad.cpp  Quad.h  QuadNew.cpp  QuadNew.h  TensorQuad.cpp
src/cxx/Element/HyperCube/Hex/: AcousticHex.cpp  AcousticHex.h  HexP1.cpp  HexP1.h
src/cxx/Element/HyperCube/Hex/Autogen/: hex_autogen.h  order1_hex.c  order2_hex.c  order3_hex.c  order3_hex.h  order4_hex.c  order5_hex.c  order6_hex.c
src/cxx/Element/HyperCube/Quad/: Acoustic.cpp  Acoustic.h  Elastic.cpp  Elastic.h  QuadNew.cpp  QuadNew.h  QuadP1.cpp  QuadP1.h
src/cxx/Element/HyperCube/Quad/Autogen/: order10_square.c  order10_square.h  order1_square.c  order1_square.h  order2_square.c  order2_square.h  order3_square.c  order3_square.h  order4_square.c  order4_square.h  order5_square.c  order5_square.h  order6_square.c  order6_square.h  order7_square.c  order7_square.h  order8_square.c  order8_square.h  order9_square.c  order9_square.h  quad_autogen.h
src/cxx/Element/HyperCube/Square/Autogen/: order10_square.c  order2_square.h  order4_square.c  (+3 more)
src/cxx/Element/Simplex/: Tetrahedra.cpp  Tetrahedra.h  TetrahedraNew.cpp  TetrahedraNew.h  Triangle.cpp  Triangle.h  TriangleNew.cpp  TriangleNew.h
src/cxx/Element/Simplex/Tetrahedra/: AcousticTet.cpp  AcousticTet.h  TetP1.cpp  TetP1.h
src/cxx/Element/Simplex/Triangle/: AcousticTri.cpp  AcousticTri.h  TriP1.cpp  TriP1.h
src/cxx/Mesh/: ElasticAcoustic2D.cpp  ElasticAcousticNewmark2D.cpp  ElasticAcousticNewmark3D.cpp  ElasticNewmark2D.cpp  ElasticNewmark2D.h  Mesh.cpp  Mesh.h  ScalarLeapFrog4th.cpp  ScalarNewmark2D.cpp  ScalarNewmark2D.h
src/cxx/Model/: ExodusModel.cpp  ExodusModel.h  Model.cpp
src/cxx/Physics/: Acoustic2D.cpp  Acoustic2D.h  Acoustic3D.cpp  Acoustic3D.h  Acoustic3D_V.cpp  Acoustic3D_V.h  AcousticHex3D.cpp  AcousticHex3D_LF.cpp  AcousticNew.cpp  AcousticNew.h  AcousticTet.cpp  AcousticTet.h  AcousticTet3D.cpp  AcousticTet3D.h  AcousticTri.cpp  AcousticTri.h  AcousticTriNew.cpp  AcousticTriNew.h  Elastic2D.cpp  Elastic2D.h  Elastic3D.cpp  Elastic3D.h  ElasticNew.cpp  ElasticNew.h
src/cxx/Physics/Boundary/: HomogeneousDirichlet.cpp
src/cxx/Physics/Coupling/: AcousticElastic2D.cpp  AcousticToElastic2D.cpp  ElasticAcoustic2D.cpp  ElasticToAcoustic.cpp  SaveSurfaceGreenFunction.cpp
src/cxx/Physics/Element/: Acoustic2D.cpp  Acoustic3D.cpp  Acoustic3D_V.cpp  AcousticHex3D.cpp  AcousticHex3D_LF.cpp  AcousticTet.cpp  AcousticTri.cpp  Elastic2D.cpp  Elastic3D.cpp  Scalar.cpp  ScalarTri.cpp
src/cxx/Problem/: FieldIo.cpp  FieldIo.h  NewmarkGeneral.cpp  NewmarkGeneral.h  NewmarkTesting.cpp  NewmarkTesting.h  Order2Newmark.cpp  Problem.cpp  Problem.h  ProblemNew.cpp  TimeDomainElastic2d.cpp  TimeDomainElastic2d.h  TimeDomainScalar2d.cpp  TimeDomainScalar2d.h
src/cxx/Receiver/: Receiver.cpp  Receiver.h  ReceiverHdf5.cpp  ReceiverHdf5.h
src/cxx/Source/: Ricker.cpp  Source.cpp  Source.h  SourceHdf5.cpp
src/cxx/Testing/: catch.h  test_2d_fluid_solid_couple.cpp  test_Element.cpp  test_HexP1.cpp  test_Hex_Scalar_3D.cpp  test_Mesh.cpp  test_Model.cpp  test_Options.cpp  test_QuadP1.cpp  test_Quad_Elastic_2D.cpp  test_Quad_Scalar_2D.cpp  test_Save_Surface_Green_Function.cpp  test_Scalar_2D.cpp  test_Scalar_3D.cpp  test_TensorHex.cpp  test_TensorQuad.cpp  test_Tetrahedra.cpp  test_TriP1.cpp  test_Utilities.cpp  test_coupling.cpp  test_element.cpp  test_exactsolution.cpp  test_hexahedra.cpp  test_main.cpp  test_multi_field.cpp  test_problem_new.cpp  test_quad.cpp  test_quadbase.cpp  test_receiver.cpp  test_source.cpp  test_strides.cpp  test_templates.cpp  test_tetrahedra.cpp
src/cxx/Utilities/: Logging.cpp  Options.cpp  Options.h  PETScExtensions.c  PETScExtensions.cpp  PETScExtensions.h  Utilities.cpp  Utilities.h  kdtree.c
src/py/pysalvus/: element_metrics.py  hexahedra_element_metrics.py  pysalvus.py  tetrahedra_element_metrics.py  triangle_element_metrics.py
src/py/pysalvus/analytic/: analytic_integrals.py
src/py/pysalvus/code_generation/: BuildNodesTetrahedraP3.py  code_generator.py  test_code_generator.py  test_quadrature_points_weights.py  test_triangle_points_weights_polys.py  tetrahedra_points_weights_polys.py  triangle_points_weights_polys.py
src/py/pysalvus/model_handling/: exodus.py  model.py
(+4 files in other folders)
